# WQI_Research_VIT

./: .gitignore  README.md  WQI_Research_Paper_Outline.docx  pyproject.toml  requirements.txt
src/analysis/: temporal_mixed_effects.py  trend_analysis.py
src/forecasting/: gam_forecaster.py  hierarchical_state_space.py  panel_forecaster.py  parameter_forecaster.py  parameter_forecaster_interpolated.py  temporal_features.py
src/preprocessing/: audit.py  check_file.py  diagnostic.py  interpolation.py  monthly.py  wqi_calc.py
src/randomforest_trial/: aggreate_train2.py  aggregate_train.py  capping_train.py  row_wise_train.py  temporal_train.py
src/trial/: dashboard.py  debug_oxy.py  final_forecaster.py  forecast.py  geocode.py  oxy_geocoder.py
src/xgboost_trial/: evals.py  features.py  loader.py  main.py  predict.py  temporal.py  train.py
